<resources>
    <string name="app_name">Halovat</string>
    <string name="yaqin_masjid">YAQIN MASJID</string>
    <string name="taqvim">Halovat</string>
    <string name="peshin">Peshin</string>
    <string name="asr">Asr</string>
    <string name="shom">Shom</string>
    <string name="hufton" translatable="false">Hufton</string>
    <string name="bomdod">Tong</string>
    <string name="quyosh">Quyosh</string>
    <string name="sozlamalar">SOZLAMALAR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>